tests/NormalTests/paczka1/fuzzy1/97217392.err
Error in line 1: S986 S636 20,0
Error in line 5: S986 A434 54,3
Error in line 19: Fs042PuIW S636 27,2
Error in line 26: SdbwOm S636 55,6
Error in line 30: SdbwOm A434 41,8
